feat: refactor swagger config and add static serve
